--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <img src="#" alt="drgd" width = 300>
   <title>Document</title>
-  <link rel="stylesheet" href="style/css">
+  <link rel="stylesheet" href="style.css">
 </head>
   <header></header>
 <body>
@@ -132,3 +132,51 @@
 </body>
 <podval>вот мой номер телефона ели есть какието вопросы то пишите мне 79630436813</podval>
 </html>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
